# PFELegislationService

./: .dockerignore  .env.example  BACKLOG.md  Dockerfile  Documentation-EN.md  Documentation-FR.md  Documentation.md  README.md  docker-compose.yml  evaluation_dataset.json  main.py  pyproject.toml  questions.md  search_comparison.md
app/api/: dependencies.py  routes.py
app/core/: config.py  dependencies.py
app/documents/: 01-99-2023-fra-4105.md  d-98-08.md  importation-marchandises-commerciales.md  memorandum-D11-4-2.md  memorandum-D17-1-10.md  memorandum-D19-1-1.md  memorandum-D19-10-2.md  methode-transactionelle-valeur-en-douane-d13-1-3.md  reglements-salubrite-aliments.md  s02-ch06-plates-vivantes-et-produits-de-la-florculture.md  s02-ch07-legumes-plantes-racines-et-tubercules-alimentaires.md  s02-ch08-fruits-comestibles-ecorces-argumes-ou-melons.md  s02-ch09-cafe-the-mate-epices.md  s02-ch10-cereales.md  s02-ch11-produits-de-la-minoterie-malt-amidons.md  s02-ch12-graines-et-fruits-oleagnieux.md  s02-ch13-gommes-resines.md  s02-ch14-produits-vegetaux.md  s03-ch15.md  s04-ch17-sucres-et-sucreries.md  s04-ch18-cacao.md  s04-ch19.md  s04-ch20.md  s04-ch21-preparation-alimentaires-diverses.md  s04-ch22-boissons-liquides-alcooliques-et-vinaigres.md  s05-ch25-sel-soufre-terres-pierres-platres-chaux-ciments.md  s05-ch26-minerais-scories-cendres.md  s05-ch27.md  test_document.md  traitements-tarifiaires-des-pays.md  (+2 more)
app/models/: schemas.py  (+4 more)
docs/: deployment-en.puml  deployment.puml
rag_evaluation/: eval_questions.json  eval_script.py  ragas_dataset.json  ragas_eval.py
(+6 files in other folders)
