[project]
name = "my-project"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.105.2",
    "cohere>=7.0.5",
    "fastapi[standard]>=0.136.3",
    "fastembed>=0.8.0",
    "mistletoe>=1.5.1",
    "openai>=2.44.0",
    "pydantic-settings>=2.14.1",
    "qdrant-client>=1.18.0",
    "scalar-fastapi>=1.4.4",
]
